A fix for IE 11 to force it wrap `<label/>` text

--- a/style.css
+++ b/style.css
@@ -611,6 +611,12 @@
 	white-space : nowrap;
 }
 
+.rrui__checkbox__label--multiline
+{
+	/* A fix for IE 11 to force it wrap `<label/>` text */
+	flex : 1 0 0;
+}
+
 .rrui__checkbox__label--fallback
 {
 	padding-left : 0;
